--- a/main.html
+++ b/main.html
@@ -66,7 +66,7 @@
       <div class="container">
         <div class="text-center">
           <img class="wow fadeInUp" src="img/pattern1.png" alt="">
-          <h1>Our Signature Menu</h1>
+          <h1 class="wow fadeInUp">Our Signature Menu</h1>
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </div>
@@ -141,7 +141,7 @@
        <div class="container-fluid chef-box text-center">
          <div class="container">
            <img class="wow fadeInUp"src="img/pattern1.png" alt="">
-           <h1>OUR CHEFTS</h1>
+           <h1 class="wow fadeInUp">OUR CHEFTS</h1>
            <div class="row">
              <div class="col-md-4 wow fadeInUp">
                <img src="img/chef1.jpg" class="chef-box-img" alt="">
@@ -204,7 +204,7 @@
           </div>
         </div>
        </div>
-       <footer class="footer wow fadeInUp">
+       <footer class="footer">
          <div class="container">
           <div class="row">
            <div class="text-muted col-md-6">&copy; Copyright 2018 - Steakhouse Website.</div>
