Add Navigation Link

--- a/main.html
+++ b/main.html
@@ -34,13 +34,13 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Menu</a>
+            <a class="nav-link" href="#signiture-menu">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">TasteBuds</a>
+            <a class="nav-link" href="#main-manus">TasteBuds</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Our Chefs</a>
+            <a class="nav-link" href="#chef-box">Our Chefs</a>
           </li>
           <li class="nav-item">
             <button class="btn btn-primary contact-primary-button">Reservation</button>
@@ -62,7 +62,7 @@
     </div>
 
       <!--signiture menu-->
-    <div class="container-fluid signiture-menu">
+    <div class="container-fluid signiture-menu" id="signiture-menu">
       <div class="container">
         <div class="text-center">
           <img class="wow fadeInUp" src="img/pattern1.png" alt="">
@@ -113,7 +113,7 @@
         </div>
        </div>
          <!--main menus-->
-       <div class="container-fluid main-manus">
+       <div class="container-fluid main-manus" id="main-manus">
          <div class="container text-center">
            <img class="wow fadeInUp" src="img/pattern1.png" alt="">
            <h1 class="wow fadeInUp">Streakhouse Menu</h1>
@@ -138,7 +138,7 @@
          </div>
        </div>
        <!--Chef Box-->
-       <div class="container-fluid chef-box text-center">
+       <div class="container-fluid chef-box text-center" id="chef-box">
          <div class="container">
            <img class="wow fadeInUp"src="img/pattern1.png" alt="">
            <h1 class="wow fadeInUp">OUR CHEFTS</h1>
